# peko

./: CLA.md  Cargo.toml  README.md  TODO.md
.github/workflows/: oci-rust-sdk-publish.yml
adapt-cache/: Cargo.toml
adapt-cache/src/: fs.rs  mod.rs  s3.rs
allat/: README.md
cli/src/generators/: typescript.rs
cloud/: .gitignore  Pulumi.prod.yaml  Pulumi.yaml  index.ts  package-lock.json
e4/: Cargo.toml  build.rs  run.js
e4/src/: http_body_resource.rs  lib.rs  runtime_options.rs
fn0/: Cargo.toml  TODO.md
fn0/src/: deployment.rs  execute.rs  lib.rs  telemetry.rs
forte/: Cargo.toml  PLAN.md  PROGRESS.md
forte-manual/fe/: package-lock.json  package.json
forte-manual/fe/src/: server.ts
forte-manual/rs/: Cargo.toml  build.rs
forte-manual/rs/src/pages/index/: mod.rs
forte-manual/rs/src/pages/product/[id]/: mod.rs
forte-old/: CLAUDE.md  PLAN.md  TODO.md
forte-old/src/: error_formatter.rs  main.rs
forte-old/src/config/: mod.rs
forte-old/src/generator/: typescript.rs
forte-old/src/parser/: rust_parser.rs  types.rs
forte-old/src/runtime/: mod.rs
forte-old/src/server/: mod.rs
forte-old/src/templates/: frontend_ssr.rs  mod.rs
forte-old/src/watcher/: mod.rs
forte-old/tests/: codegen_test.rs  integration_test.rs  wasm_http_test.rs
forte-rs-to-ts/: GOAL.md  rust-toolchain.toml
forte-rs-to-ts/src/: main.rs
forte/src/: lib.rs  main.rs
forte/src/cli/: add.rs  dev.rs  init.rs  mod.rs
forte/src/codegen/: backend.rs  frontend.rs
forte/src/commands/: build.rs  dev.rs  generate.rs  init.rs  mod.rs  test.rs
forte/src/server/: mod.rs
forte/src/templates/: error_boundary.rs
forte/tests/: add_test.rs  init_test.rs  wasm_runtime_test.rs
forte/wit/: world.wit
hq/: Cargo.toml  Dockerfile  build.rs
hq/src/: args.rs  args_parse.rs  deployment_db.rs  health_checker.rs  host_id.rs  main.rs  reaper.rs  telemetry.rs
hq/src/dns/: cloudflare.rs  mod.rs
hq/src/host_infra/: mod.rs  oci.rs
hq/src/host_provider/: mod.rs
hq/src/watchdog/: mod.rs
measure-cpu-time/src/: lib.rs
oci-rust-sdk/: .gitignore  Cargo.toml
oci-rust-sdk/examples/: container_instance_lifecycle.rs  launch_instance_configuration.rs  list_container_instances.rs  list_instances.rs  list_public_ips.rs  resource_search.rs  simple_auth.rs  simple_container_instance.rs  test_lifecycle_state.rs  using_traits.rs
oci-rust-sdk/src/: lib.rs
oci-rust-sdk/src/compute/: mod.rs
oci-rust-sdk/src/container_instances/: mod.rs
oci-rust-sdk/src/core/: mod.rs  region.rs
oci-rust-sdk/src/os_management_hub/: mod.rs
oci-rust-sdk/src/resource_search/: mod.rs
oci-rust-sdk/src/virtual_network/: mod.rs
peko/: Cargo.toml  TODO.md
peko/src/: execute.rs  main.rs  metrics.rs
peko/src/wasm_code_provider/: sample_wasi_http_rust.wasm
pulumi/: .gitignore  AwsWatchdog.ts  AwsWatchdogVpc.ts  B2CloudflareStaticCdn.ts  OciComputeWorker.ts  OciHeadQuarter.ts  PulumiPlugin.yaml  hqArgs.schema.ts  index.ts  package-lock.json  package.json
pulumi/BuildChain/: AwsLambdaCwasmCompiler.ts  AwsWasmS3.ts  index.ts
pulumi/OciHeadQuarter/: docker-registry.ts  grafana.ts  hq-deployment.ts  index.ts  networking.ts  oke-cluster.ts
sample-wasi-http-rust/: README.md  sample_wasi_http_rust.wasm
sample-wasi-http-rust/src/: lib.rs
second-satellite/: astro.config.mjs  package-lock.json  package.json
ski/ski/: bootstrap.js  run.js
src/: execute.rs  main.rs
src/conversion/: json.rs
src/wasm_code_provider/: fs.rs  mod.rs
suisei/: package-lock.json  package.json  tsconfig.json
suisei/src/: adapter.ts  build.ts  index.ts  server-entry.ts
suisei/wit/: component.wit
watchdog/: Cargo.toml
watchdog/src/: main.rs  scaling.rs
watchdog/src/dns/: cloudflare.rs
watchdog/src/health_recorder/: mod.rs  update_health_records.rs
watchdog/src/worker_infra/: mod.rs  oci.rs
worker-health-checker/: Cargo.toml  build-lambda.sh
worker-health-checker/src/: lib.rs  main.rs
(+37 files in other folders)
