[package]
name = "watchdog"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
aws-config = "1.8.11"
aws-sdk-dynamodb = "1.100.0"
aws-sdk-s3 = "1.115.0"
base64 = "0.22.1"
chrono = "0.4.42"
futures = "0.3.31"
oci-rust-sdk = { path = "../oci-rust-sdk", features = ["compute"] }
reqwest = { version = "0.12.24", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
