[package]
name = "worker-health-checker"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
aws-config = "1.8.11"
aws-sdk-lambda = "1.110.0"
color-eyre = "0.6.5"
futures = "0.3.31"
lambda_runtime = "1.0.1"
reqwest = { version = "0.12.24", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
