[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:backend"
proxy = true

[dependencies]
anyhow = "1.0.100"
http = "1.4.0"
http-body-util = "0.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }
wstd = "0.6"
